--- a/res/layout/congressmen_list_layout.xml
+++ b/res/layout/congressmen_list_layout.xml
@@ -83,12 +83,13 @@
         android:layout_marginTop="15dp" >
         
     <Button
-               android:id="@+id/description_btn_follow"
+               android:id="@+id/list_btn_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:background="@drawable/inactive_followed" />     
+               android:onClick="followedCongressman"
+               android:background="@drawable/followed_button" />     
     
-    />
+    
     
 </RelativeLayout>
     
