--- a/res/layout/ranking_layout.xml
+++ b/res/layout/ranking_layout.xml
@@ -4,7 +4,11 @@
     android:layout_height="100dp"
     android:background="@drawable/extended_bar"
     android:orientation="horizontal"
-    android:baselineAligned="false" >
+    android:baselineAligned="false"
+    android:clickable="false"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+	android:focusableInTouchMode="false" >
 
     <RelativeLayout
         android:layout_width="100dp"
@@ -125,16 +129,15 @@
             android:text="@string/congressman_name" />
     </RelativeLayout>
     
-	<RelativeLayout
-	    	android:layout_width="40dp"
-	        android:layout_height="40dp"
-	        android:layout_marginRight="15dp"		
-	        android:layout_marginTop="15dp" >
+	
 	        
-	    <Button
-	        android:id="@+id/description_btn_follow"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:background="@drawable/inactive_followed" />         
-	</RelativeLayout>
+	     <Button
+               android:id="@+id/ranking_btn_follow"
+               android:layout_width="40dp"
+               android:layout_height="40dp"
+               android:onClick="followedCongressman"
+               android:layout_marginRight="15dp"
+               android:layout_marginTop="25dp"
+               android:background="@drawable/followed_button" />            
+	
 </LinearLayout>
