--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,20 +1,18 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
-
+    <style name="CustomActionBarTheme" parent="@android:style/Theme.Holo.Light">
+       <item name="android:actionBarStyle">@style/CustomActionBar</item>
+       <item name="android:icon">@drawable/logo</item>
+</style>
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="CustomActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    <item name="android:background">#5C6C78</item>
+    
     </style>
 
 </resources>
