--- a/res/layout/congressmen_list_layout.xml
+++ b/res/layout/congressmen_list_layout.xml
@@ -13,11 +13,22 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/ranking_layout_congressman_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+      	<ImageView
+            android:id="@+id/layout_style_photo"
+            android:layout_margin="5dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/background_photo" />
+ 
+        <br.com.visualize.akan.api.helper.RoundedImageView
+            android:layout_margin="10dp"
+            android:id="@+id/ranking_layout_congressman_photo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
             android:src="@drawable/default_photo" />
 
     </RelativeLayout>
@@ -25,7 +36,7 @@
     
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1.39" >
 
