--- a/res/layout/ranking_layout.xml
+++ b/res/layout/ranking_layout.xml
@@ -24,15 +24,25 @@
             android:text="@string/ranking_position"
             android:textColor="#000033"
             android:textSize="15sp" />
-
-        <ImageView
-            android:id="@+id/ranking_layout_congressman_photo"
-            android:contentDescription="@string/image_description_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        
+      	<ImageView
+            android:id="@+id/layout_style_photo"
+            android:layout_margin="5dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/background_photo" />
+ 
+        <br.com.visualize.akan.api.helper.RoundedImageView
+            android:layout_margin="10dp"
+            android:id="@+id/ranking_layout_congressman_photo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
             android:src="@drawable/default_photo" />
-
+		
         <TextView
             android:id="@+id/ranking_layout_txt_ordinary_symbol"
             android:layout_width="wrap_content"
@@ -45,6 +55,7 @@
             android:text="@string/ordinary_symbol"
             android:textColor="#000033"
             android:textSize="15sp" />
+        
     </RelativeLayout>
 
     <RelativeLayout
