--- a/res/layout/congressmen_list_layout.xml
+++ b/res/layout/congressmen_list_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:baselineAligned="false" 
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="@drawable/extended_bar"
@@ -20,7 +21,8 @@
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:scaleType="fitXY"
-            android:src="@drawable/background_photo" />
+            android:src="@drawable/background_photo"
+            android:contentDescription="@string/layout_style_photo" />
  
         <br.com.visualize.akan.api.helper.RoundedImageView
             android:layout_margin="10dp"
@@ -51,18 +53,21 @@
             android:id="@+id/ranking_layout_txt_congressman_party"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/ranking_layout_txt_congressman_name"
             android:layout_alignLeft="@+id/ranking_layout_txt_congressman_name"
             android:layout_marginTop="30dp"
             android:textColor="#536571"
-            android:text="Partido" />
+            android:text="@string/party" />
         <TextView 
             android:id="@+id/ranking_layout_txt_espace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/ranking_layout_txt_congressman_party"
             android:layout_toRightOf="@+id/ranking_layout_txt_congressman_party"
             android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
+            android:layout_marginStart="2dp" 
             android:layout_marginLeft="2dp"
-            android:text="-"
+            android:text="@string/trace"
             />
 
         <TextView
@@ -70,39 +75,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            	android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
+           	android:layout_toEndOf="@+id/ranking_layout_txt_espace"
            	android:layout_toRightOf="@+id/ranking_layout_txt_espace"
+           	android:layout_marginStart="2dp"
            	android:layout_marginLeft="2dp"
            	android:textColor="#536571"
-            android:text="UF" />
+            android:text="@string/FedUnity" />
 
         <TextView
             android:id="@+id/ranking_layout_txt_congressman_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:textColor="#536571"
-            android:text="nome" />
+            android:text="@string/name" />
 
         
 
     </RelativeLayout>
-<RelativeLayout
+	<RelativeLayout
     	android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentRight="true"
+        android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"		
         android:layout_marginTop="15dp" >
         
-    <Button
+    		<Button
                android:id="@+id/list_btn_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="followedCongressman"
                android:background="@drawable/followed_button" />     
     
-    
-    
-</RelativeLayout>
-    
-
+	</RelativeLayout>
 </LinearLayout>
