--- a/res/layout/ranking_layout.xml
+++ b/res/layout/ranking_layout.xml
@@ -32,7 +32,8 @@
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:scaleType="fitXY"
-            android:src="@drawable/background_photo" />
+            android:src="@drawable/background_photo"
+            android:contentDescription="@string/image_description_default" />
  
         <br.com.visualize.akan.api.helper.RoundedImageView
             android:layout_margin="10dp"
@@ -49,7 +50,9 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/ranking_layout_position"
             android:layout_alignBottom="@+id/ranking_layout_position"
+            android:layout_alignEnd="@+id/ranking_layout_position"
             android:layout_alignRight="@+id/ranking_layout_position"
+            android:layout_marginEnd="-10dp"
             android:layout_marginRight="-10dp"
             android:layout_marginTop="5dp"
             android:text="@string/ordinary_symbol"
@@ -68,9 +71,11 @@
             android:contentDescription="@string/image_description_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="5dp"
+            android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             android:src="@drawable/ranking1" />
         
@@ -79,7 +84,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginRight="2dp"
+            android:layout_alignEnd="@+id/ranking_layout_content_value"
             android:layout_alignRight="@+id/ranking_layout_content_value"
         	android:layout_alignParentBottom="true"
         	android:textColor="#FFF"
@@ -89,10 +96,13 @@
             android:id="@+id/ranking_layout_txt_monetary_symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/ranking_layout_txt_value"
             android:layout_toLeftOf="@+id/ranking_layout_txt_value"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:textColor="#FFF"
+            android:layout_alignStart="@+id/ranking_layout_content_value"
             android:layout_alignLeft="@+id/ranking_layout_content_value"
         	android:layout_alignParentBottom="true"
             android:text="@string/monetary_symbol" />
@@ -107,6 +117,7 @@
             android:id="@+id/ranking_layout_txt_congressman_party"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/ranking_layout_txt_congressman_name"
             android:layout_alignLeft="@+id/ranking_layout_txt_congressman_name"
             android:layout_marginTop="30dp"
             android:textColor="#536571"
@@ -116,8 +127,10 @@
             android:id="@+id/ranking_layout_txt_espace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/ranking_layout_txt_congressman_party"
             android:layout_toRightOf="@+id/ranking_layout_txt_congressman_party"
             android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
+            android:layout_marginStart="2dp"
             android:layout_marginLeft="2dp"
             android:text="@string/trace" />
 
@@ -126,7 +139,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            	android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
+           	android:layout_toEndOf="@+id/ranking_layout_txt_espace"
            	android:layout_toRightOf="@+id/ranking_layout_txt_espace"
+           	android:layout_marginStart="2dp"
            	android:layout_marginLeft="2dp"
            	android:textColor="#536571"
             android:text="@string/congressman_home_state" />
@@ -135,6 +150,7 @@
             android:id="@+id/ranking_layout_txt_congressman_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:textColor="#536571"
             android:text="@string/congressman_name" />
@@ -147,6 +163,7 @@
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="followedCongressman"
+               android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/followed_button" />            
