Modifying bottom menu bar

--- a/res/layout/action_bar.xml
+++ b/res/layout/action_bar.xml
@@ -12,11 +12,10 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
-    android:text="Parlamentares"
+    android:text="@string/congressman"
     android:textColor="#FFFFFF"
     android:textSize="22sp" />
         
-        />
 </RelativeLayout>
     
 
