--- a/res/layout/list_screen_activity.xml
+++ b/res/layout/list_screen_activity.xml
@@ -32,40 +32,45 @@
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:scaleType="fitXY"
-            android:src="@drawable/bottom_bar" ></ImageView>
+            android:src="@drawable/bottom_bar"
+            android:contentDescription="@string/image_description_default" />
 
            <Button
                android:id="@+id/btn_ranking"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="50dp"
+               android:layout_height="50dp"
                android:layout_alignParentBottom="true"
+               android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:background="@drawable/inactive_ranking" />
 
            <Button
                android:id="@+id/btn_follow"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="50dp"
+               android:layout_height="50dp"
                android:layout_alignParentBottom="true"
+               android:layout_marginBottom="5dp"
+               android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
-               android:layout_marginLeft="34dp"
+               android:layout_marginStart="30dp"
+               android:layout_marginLeft="30dp"
                android:scaleType="fitXY"
                android:onClick="onFollowList"
                android:background="@drawable/inactive_followed" />
 
            <Button
                android:id="@+id/btn_search"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
+               android:layout_width="50dp"
+               android:layout_height="50dp"
                android:layout_alignParentBottom="true"
+               android:layout_marginBottom="5dp"
+               android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
-               android:layout_marginRight="25dp"
+               android:layout_marginEnd="30dp"
+               android:layout_marginRight="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/inactive_search" />
         
     </RelativeLayout>
-
-   
-
 </RelativeLayout>
