--- a/res/layout/description_screen_activity.xml
+++ b/res/layout/description_screen_activity.xml
@@ -41,15 +41,23 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/description_congressman_photo"
-            android:contentDescription="@string/image_description_photo"
+            android:id="@+id/layout_style_photo"
+            android:layout_margin="5dp"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/default_photo"
-            android:maxHeight="64dp"
-            android:maxWidth="64dp" />
+            android:scaleType="fitXY"
+            android:src="@drawable/background_photo"
+            android:contentDescription="@string/layout_style_photo" />
+ 
+        <br.com.visualize.akan.api.helper.RoundedImageView
+            android:layout_margin="10dp"
+            android:id="@+id/description_congressman_photo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/default_photo" />
 
         <TextView
             android:id="@+id/description_txt_congressman_name"
