--- a/res/layout/ranking_layout.xml
+++ b/res/layout/ranking_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/ranking_layout_congressman_photo"
             android:layout_centerInParent="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="-8dp"
             android:text="@string/ranking_position"
             android:textColor="#000033"
             android:textSize="15sp" />
@@ -28,8 +28,8 @@
       	<ImageView
             android:id="@+id/layout_style_photo"
             android:layout_margin="5dp"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:scaleType="fitXY"
             android:src="@drawable/background_photo"
@@ -38,8 +38,8 @@
         <br.com.visualize.akan.api.helper.RoundedImageView
             android:layout_margin="10dp"
             android:id="@+id/ranking_layout_congressman_photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_centerHorizontal="true"
             android:scaleType="fitXY"
             android:src="@drawable/default_photo" />
@@ -66,30 +66,12 @@
         android:layout_height="match_parent"
         android:layout_weight="1.39" >
         
-        <ImageView
-            android:id="@+id/ranking_layout_content_value"
-            android:contentDescription="@string/image_description_default"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="80dp"
-            android:layout_marginRight="80dp"
-            android:src="@drawable/ranking1" />
-        
         <TextView
             android:id="@+id/ranking_layout_txt_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_alignEnd="@+id/ranking_layout_content_value"
-            android:layout_alignRight="@+id/ranking_layout_content_value"
+            android:layout_margin="2dp"
         	android:layout_alignParentBottom="true"
-        	android:textColor="#FFF"
             android:text="@string/total_expenditure" />
         
         <TextView
@@ -98,28 +80,18 @@
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/ranking_layout_txt_value"
             android:layout_toLeftOf="@+id/ranking_layout_txt_value"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:textColor="#FFF"
-            android:layout_alignStart="@+id/ranking_layout_content_value"
-            android:layout_alignLeft="@+id/ranking_layout_content_value"
+            android:layout_margin="2dp"
         	android:layout_alignParentBottom="true"
             android:text="@string/monetary_symbol" />
         
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="" />
-
         <TextView
             android:id="@+id/ranking_layout_txt_congressman_party"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/ranking_layout_txt_congressman_name"
             android:layout_alignLeft="@+id/ranking_layout_txt_congressman_name"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
+            android:textSize="12sp"
             android:textColor="#536571"
             android:text="@string/congressman_party" />
         
@@ -132,6 +104,7 @@
             android:layout_alignTop="@+id/ranking_layout_txt_congressman_party"
             android:layout_marginStart="2dp"
             android:layout_marginLeft="2dp"
+            android:textSize="12sp"
             android:text="@string/trace" />
 
         <TextView
@@ -144,9 +117,11 @@
            	android:layout_marginStart="2dp"
            	android:layout_marginLeft="2dp"
            	android:textColor="#536571"
+           	android:textSize="12sp"
             android:text="@string/congressman_home_state" />
 
         <TextView
+            android:layout_margin="15dp"
             android:id="@+id/ranking_layout_txt_congressman_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
