--- a/res/layout/border.xml
+++ b/res/layout/border.xml
@@ -2,18 +2,18 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" 
     android:thickness="0dp" android:shape="rectangle">
 <solid android:color="#ffffff"/>
-<stroke android:width="2dp"
-       android:color="#4fa5d5"
+<stroke android:width="1dp"
+       android:color="#000"
        /> 
 
-<corners android:radius="10dp"    
+<corners android:radius="5dp"    
      />
 
 <padding
        android:top="5dp"   
-       android:right="40dp"
+       android:right="30dp"
        android:bottom="5dp"
-       android:left="40dp"/>
+       android:left="30dp"/>
 
 
 </shape>
